# cookiecutter-cpp

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .clang  .clang-format  .clang-tidy  CMakeLists.txt  cmake_ru.sh  cmake_run.sh  run_code.sh  ~formatting_0-98_590104_.clang-tidy
{{cookiecutter.repo_name}}/.github/workflows/: build_cmake.yml
{{cookiecutter.repo_name}}/src/: CMakeLists.txt  main.cpp
{{cookiecutter.repo_name}}/src/includes/: .{{cookiecutter.project_name}}.hpp.swp  {{cookiecutter.project_name}}.hpp
{{cookiecutter.repo_name}}/src/sources/: {{cookiecutter.project_name}}.cpp  {{cookiecutter.project_name}}TestSuite.cpp
{{cookiecutter.repo_name}}/test/: CMakeLists.txt  {{cookiecutter.project_name}}TestSuite.cpp
